--- a/style.css
+++ b/style.css
@@ -1,18 +1,56 @@
 body {
     font-family: Calibri, arial, sans-serif;
-    background-color: #0097e8;
-    color: white;
     font-size: 18px;
 }
 
+nav {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    margin: 0;
+    height: 50px;
+    background-color: #003957;
+    padding: 5px;
+    border-bottom: 5px solid #0097e8;
+}
+
+.main-section {
+    margin-top: 50px;
+}
+
+.logo {
+    background-image: url('./palm-white.png');
+    height: 40px;
+    width: 220px;
+    margin: 5px auto;
+    background-repeat: no-repeat;
+    background-size: contain;
+    cursor: pointer;
+    text-align: right;
+    vertical-align: center;
+    font-size: 32px;
+    color: white;
+}
+
+.logo:hover {
+    background-image: url('./palm-gold.png');
+    color: #d4c158;
+}
+
+.first-letter {
+    font-size: 1.3em;
+}
+
 .user {
+    color: #003957;
     font-weight: bold;
     cursor: pointer;
     font-size: 1.1em;
 }
 
 .user:hover {
-    color: #003957; /* Change the color to match the eventual color palette */
+    color: #0097e8;
 }
 
 .subtle {
@@ -21,10 +59,8 @@ body {
 }
 
 .tweet {
-
     margin-bottom: 0;
     padding: 10px;
-    border-left: 1px solid white;
-    border-right: 1px solid white;
-    border-bottom: 1px solid white;
+    border: 1px solid #e2e2e2;
+    border-top: none;
 }
