--- a/style.css
+++ b/style.css
@@ -15,8 +15,24 @@ nav {
     border-bottom: 5px solid #0097e8;
 }
 
+.wrapper {
+    margin-top: 55px;
+}
+
 .main-section {
-    margin-top: 50px;
+    margin-left: 25%;
+}
+
+aside {
+    position: fixed;
+}
+
+#view {
+    color: #003957;
+    font-weight: bold;
+    font-size: 1.1em;
+    text-align: center;
+    padding-top: 10px;
 }
 
 .logo {
@@ -63,4 +79,34 @@ nav {
     padding: 10px;
     border: 1px solid #e2e2e2;
     border-top: none;
+}
+
+/*
+============================================================
+Columns
+============================================================
+*/
+
+.col-1-3 {
+    width: 33%;
+    display: block;
+    float: left;
+}
+
+.col-1-4 {
+    width: 25%;
+    display: block;
+    float: left;
+}
+
+.col-2-3 {
+    width: 66%;
+    display: block;
+    float: left;
+}
+
+.col-1-2 {
+    width: 50%;
+    display: block;
+    float: left;
 }
